# farmvision

./: .deepsource.toml  .dockerignore  .env.example  .env.railway.example  .gitignore  .replit  CHANGELOG.md  CODE_QUALITY_AUDIT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GITHUB_SETUP.md  LICENSE  Procfile  QUICK_START_GITHUB.md  README.md  README_TR.md  RELEASES.md  SECURITY_AUDIT_REPORT.md  analysis_config.py  app.py  backup_complete_info.md  backup_info.md  config.py  create_release.bat  create_release.sh  dependencies.md  docker-compose.yml  docker-entrypoint.sh  gunicorn_config.py  local_setup.md  main.py  manage.py  models.py  mypy.ini  nginx.conf  nixpacks.toml  pyproject.toml  pytest.ini  railway-deploy.md  (+20 more)
.nixpacks/: config.nix
accounts/: urls.py  views.py
analysis_logger/: service.py  tests.py
attached_assets/: Pasted--Critical-debugging-fixes-for-final-template-set-1-Fix-register-html-Missing-CSRF-1752279343652_1752279343654.txt  Pasted--Critical-debugging-fixes-for-utility-files-1-Fix-histogram-geotiff-py-Missing-error-handli-1752278381734_1752278381734.txt  Pasted--Critical-fixes-for-HTML-templates-1-Fix-base-html-Add-CSRF-protection-and-XSS-pr-1752279033920_1752279033921.txt  Pasted--Critical-fixes-for-the-Flask-agricultural-monitoring-app-1-Fix-auth-py-profile-email-validat-1752278059769_1752278059769.txt  Pasted--Railway-Deployment-Updates-for-Farm-Vision-1-Create-Update-requirements-txt-Railway-sometim-1754610324792_1754610324793.txt  dizin_yapisi_1751323439766.txt  footer_1751324254755.html  form2_1751324254757.html  form_1751324254756.html  (+12 more)
(+238 files in other folders)
