[project]
name = "farm-vision"
version = "1.0.0"
description = "Farm Vision - AI-Powered Agricultural Analysis Platform"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=1.3.0,<3.0.0",
    "flask-login>=0.6.0,<1.0.0",
    "flask>=2.3.0,<4.0.0",
    "flask-sqlalchemy>=3.0.0,<4.0.0",
    "gunicorn>=20.1.0,<22.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "scipy>=1.9.0,<2.0.0",
    "sqlalchemy>=1.4.0,<3.0.0",
    "werkzeug>=2.3.0,<4.0.0",
    "pandas>=1.5.0,<2.0.0",
    "opencv-python-headless>=4.5.0,<5.0.0",
    "pillow>=9.5.0,<11.0.0",
    "numpy>=1.24.0,<2.0.0",
    "matplotlib>=3.7.0",

    "rasterio>=1.3.0,<2.0.0",
    "flask-wtf>=1.1.0,<2.0.0",
    "wtforms>=3.0.0,<4.0.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
exclude = ["static*", "templates*", "instance*", "detection_models*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.ico", "*.png", "*.jpg", "*.svg"]
